--- a/.github/workflows/youtube-cards.yml
+++ b/.github/workflows/youtube-cards.yml
@@ -1,17 +1,49 @@
-name: GitHub Readme YouTube Cards
+name: Update YouTube Cards - Ifechukwu Okuma
+
 on:
   schedule:
-    # Runs every hour, on the hour
-    - cron: '0 * * * *'
+    - cron: "0 * * * *" # Runs every hour
   workflow_dispatch:
 
 jobs:
-  deploy:
+  update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
-      - uses: DenverCoder1/github-readme-youtube-cards@main
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Update README with YouTube videos
+        uses: DenverCoder1/github-readme-youtube-cards@main
         with:
-          channel_id: UC2WHjPDvbE6O328n17ZGcfg
+          channel_id: UCipSxT7a3rn81vGLw9lqRkg # Your YouTube Channel ID
+          lang: en
           comment_tag_name: YOUTUBE-CARDS
           youtube_api_key: ${{ secrets.YOUTUBE_API_KEY }}
+          max_videos: 6
+          base_url: https://ytcards.demolab.com/
+          card_width: 250
+          border_radius: 5
+          background_color: "#0d1117"
+          title_color: "#ffffff"
+          stats_color: "#dedede"
+          theme_context_light: '{ "background_color": "#ffffff", "title_color": "#24292f", "stats_color": "#57606a" }'
+          theme_context_dark: '{ "background_color": "#0d1117", "title_color": "#ffffff", "stats_color": "#dedede" }'
+          max_title_lines: 2
           show_duration: true
+          author_name: Ifechukwu Okuma (GitHub Actions)
+          author_email: 41898282+github-actions[bot]@users.noreply.github.com
+          commit_message: "docs(readme): Update YouTube cards"
+          readme_path: README.md
+          output_only: false
+          output_type: markdown
+
+      - name: Commit and push if updated
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Updated YouTube cards" || echo "No changes to commit"
+          git push
